# src/routes/api.route.ts
@@ -1,7 +1,7 @@
 import express from "express";
 import { authController } from "../controllers/auth.controller.js";
 import { validate } from "../middlewares/validate.middleware.js";
-import { createUserSchema, loginUserSchema } from "../validations/user.schema.js";
+import { activateUserSchema, createUserSchema, loginUserSchema } from "../validations/user.schema.js";
 import authMiddleware from "../middlewares/auth.middleware.js";
 
 const router = express.Router();
@@ -12,6 +12,6 @@ router.post('/auth/login', validate({body: loginUserSchema}), authController.log
 
 router.get('/auth/me', authMiddleware, authController.me);
 
-router.post('/auth/activation', authController.activation);
+router.get('/auth/activation', validate({query: activateUserSchema}), authController.activation);
 
 export default router;
